crates/wx-compiler/src/snapshots/wx_compiler__ast__tests__parse_import_with_alias.snap
---
source: crates/wx-compiler/src/ast.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      Import:
        module:
          inner: 1
          span:
            start: 7
            end: 16
        alias:
          inner: 2
          span:
            start: 20
            end: 27
        entries:
          open:
            start: 28
            end: 29
          inner:
            - inner:
                inner:
                  external_name: ~
                  declaration:
                    Function:
                      signature:
                        fn_span:
                          start: 34
                          end: 36
                        name:
                          inner: 3
                          span:
                            start: 37
                            end: 40
                        params:
                          open:
                            start: 40
                            end: 41
                          inner:
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 5
                                    span:
                                      start: 41
                                      end: 44
                                  type_annotation:
                                    prefix:
                                      start: 44
                                      end: 45
                                    inner:
                                      inner:
                                        Identifier:
                                          symbol: 4
                                      span:
                                        start: 46
                                        end: 49
                                span:
                                  start: 41
                                  end: 49
                              separator:
                                start: 49
                                end: 50
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 6
                                    span:
                                      start: 51
                                      end: 54
                                  type_annotation:
                                    prefix:
                                      start: 54
                                      end: 55
                                    inner:
                                      inner:
                                        Identifier:
                                          symbol: 4
                                      span:
                                        start: 56
                                        end: 59
                                span:
                                  start: 51
                                  end: 59
                              separator: ~
                          close:
                            start: 59
                            end: 60
                        result:
                          prefix:
                            start: 61
                            end: 63
                          inner:
                            inner:
                              Identifier:
                                symbol: 7
                            span:
                              start: 64
                              end: 68
                span:
                  start: 34
                  end: 68
              separator:
                start: 68
                end: 69
          close:
            start: 70
            end: 71
    span:
      start: 0
      end: 71
